# ai-council

./: .gitignore  .goreleaser.yml  README.md  go.mod  go.sum  main.go  pyproject.toml
.claude-plugin/: plugin.json
cmd/: ask.go  ask_test.go  common.go  costs.go  debug.go  mcp.go  mcp_test.go  models.go  research.go  review.go  root.go
docs/superpowers/plans/: 2026-03-26-usage-stats-efficiency.md  2026-03-28-go-rewrite-plan.md
docs/superpowers/specs/: 2026-03-26-usage-stats-efficiency-design.md  2026-03-28-go-rewrite-design.md
internal/config/: keys.go  keys_test.go  models.go  models_test.go
internal/cost/: pricing.json  tracker.go  tracker_test.go
internal/output/: format.go  format_test.go
internal/prompt/: prompts.go  prompts_test.go
internal/provider/: anthropic.go  anthropic_test.go  google.go  google_test.go  openai.go  openai_test.go  provider.go  provider_test.go
internal/scoring/: agreement.go  agreement_test.go
internal/strategy/: debate.go  debate_test.go  moa.go  moa_test.go  redteam.go  redteam_test.go  strategy.go
scripts/: install.sh
src/ai_council/: cli.py  config.py  cost_tracker.py  mcp_server.py  prompts.py  providers.py  scoring.py
src/ai_council/strategies/: debate.py  moa.py  redteam.py
tests/: conftest.py  test_cost_tracker.py  test_providers.py  test_scoring.py
