[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-council"
version = "1.0.0"
description = "Multi-LLM orchestrator — ask up to 6 AI models and synthesize their best answer (Personal Edition)"
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.40.0,!=1.82.7,!=1.82.8",
    "click>=8.1.0",
    "rich>=13.0.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
council = "ai_council.cli:cli"
council-mcp = "ai_council.mcp_server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
